# SphereVoice

./: .commitlintrc.json  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Patient Screening (from template).json  Patient Screening (from template).vox.json  README.md  docker-compose.yml  low-lat.py  network-vox-smoke.txt  pnpm-lock.yaml  start-prod-like.sh  start.ps1  start.sh  task.md  turbo.json
.githooks/: pre-commit
.github/: CODEOWNERS  (+1 more)
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  alembic.ini  create_db.bat  create_identity.py  debug_auth.py  pyproject.toml  requirements.txt  seed.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  002_hnsw_index_and_kb_sharing_rls.py  003_metric_aggregates_and_agent_templates.py  004_fix_audit_trigger_nil_tenant.py  005_provider_secret_refs.py  006_llm_max_tokens.py  007_kb_status_column.py  008_agent_share_links.py  009_user_invitations.py  010_agent_call_direction.py  011_crm_integrations.py  012_share_link_dynamic_variables.py  013_crm_sync_log.py  014_crm_contacts_cache.py  015_tenant_integrations.py  016_dnc_entries.py  017_campaigns.py  018_campaign_contacts.py  019_tenant_tools.py  020_agent_tools.py  021_fix_integration_status_default.py  022_agent_ring_duration.py  023_lower_default_max_call_duration.py  024_call_writeback_status.py  025_rename_zoho_columns_to_crm.py  026_provider_pricing.py  027_exchange_rates.py  028_cost_precision.py  029_phone_number_default_outbound.py  030_fix_tenant_integrations_rls.py  031_fix_tenant_tools_rls.py  032_call_tool_executions.py  033_test_scenarios.py  034_ab_testing_scheduling.py  035_fix_campaigns_rls.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  base_model.py  config.py  database.py  dependencies.py  email.py  encryption.py  errors.py  exceptions.py  logging.py  metrics.py  middleware.py  secret_store.py  security.py  telemetry.py
backend/app/modules/: __init__.py
backend/app/modules/agents/: __init__.py  ai_generator.py  models.py  router.py  schemas.py  service.py  share_link_models.py  share_link_public_router.py  share_link_router.py  share_link_schemas.py  share_link_service.py  test_matcher.py
backend/app/modules/analytics/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/auth/: __init__.py  compat_router.py  dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/modules/calls/: __init__.py  models.py  orchestrator.py  router.py  schemas.py  service.py
backend/app/modules/campaigns/: csv_parser.py  models.py  queue.py  rate_limiter.py  router.py  schemas.py  service.py  stall_detector.py  templates.py  workers.py
backend/app/modules/dnc/: models.py  router.py  schemas.py  service.py
backend/app/modules/integrations/: __init__.py  crm_cache_service.py  crm_data.py  models.py  phone_normalizer.py  router.py  schemas.py  service.py  zoho_client.py
backend/app/modules/integrations/calendly/: client.py  executor.py  oauth.py  router.py  schemas.py  tool_provisioner.py
backend/app/modules/integrations/crm/: __init__.py  base_client.py  factory.py  hubspot_client.py  salesforce_client.py
backend/app/modules/integrations/email/: sendgrid_client.py
backend/app/modules/integrations/google/: _http.py  calendar_client.py  oauth.py  router.py  schemas.py  sheets_client.py  tool_provisioner.py
backend/app/modules/integrations/messaging/: whatsapp_client.py
backend/app/modules/knowledge_base/: __init__.py  models.py  retriever.py  router.py  schemas.py  service.py
backend/app/modules/phone_numbers/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/pipeline/: __init__.py  event_broadcaster.py  extraction_templates.py  factory.py  flow_engine.py  knowledge_processor.py  models.py  orchestrator.py  retrospective_analysis.py  router.py  schemas.py  sip_trunks.py  telemetry_propagation.py  variable_resolver.py  voice_pipeline.py  ws_endpoint.py
backend/app/modules/pipeline/services/: __init__.py  ambient.py  circuit_breaker.py  groq_llm.py  latency.py  llm.py  overhead_audit.py  recording.py  sarvam_text_filter.py  smallest_tts.py  stt.py  tts.py  vocabulary.py
backend/app/modules/pricing/: __init__.py  exchange_rate.py  models.py  router.py  schemas.py  seed_pricing.py  service.py
backend/app/modules/providers/: __init__.py  models.py  naming.py  plivo_subaccounts.py  registry.py  router.py  schemas.py  service.py
backend/app/modules/tool_registry/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/tool_registry/executors/: __init__.py  calendar.py  crm_write.py  email.py  sheets.py  webhook.py  whatsapp.py
backend/app/modules/webhooks/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/workers/: __init__.py  celery_app.py  domain_harvest.py  embeddings.py  exchange_rate.py  metrics_aggregation.py  post_synchronisation.py  retention.py  telemetry_transmission.py  website_crawl.py
backend/scripts/: backfill_call_costs.py  backfill_post_call_extraction.py  benchmark_rag.py  convert_retell_template.py  fetch_elevenlabs_indic_voices.py  provision_google_tools.py  setup_sip_trunks.py  sync_shared_provider_secrets.py
backend/tests/: conftest.py
backend/tests/test_agents/: __init__.py  test_agents_api.py
backend/tests/test_analytics/: test_tenants_api.py
backend/tests/test_auth/: __init__.py  test_auth_api.py  test_dependencies.py
backend/tests/test_calls/: __init__.py
backend/tests/test_crm/: test_crm_cache_service.py  test_crm_factory.py  test_crm_oauth.py
backend/tests/test_knowledge_base/: __init__.py  test_knowledge_base.py
backend/tests/test_phone_numbers/: test_phone_numbers_api.py
backend/tests/test_pipeline/: __init__.py  test_phase5_pipeline.py  test_phase6_single_prompt.py  test_real_providers.py
backend/tests/test_providers/: __init__.py  test_provider_catalog_support.py  test_provider_service_secrets.py  test_providers_api.py
backend/tests/test_rls/: __init__.py  test_tenant_isolation.py
(+303 files in other folders)
